# Xyz

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENCE  Xyz.todo  install.sh
UnitTest/: CMakeLists.txt  main.cpp
UnitTest/Fundamentals/: YtestUtilities.hpp  test_Matrix.cpp  test_Projections.cpp  test_Transforms.cpp  test_Vector.cpp
UnitTest/Geometry/: test_Intersections.cpp  test_LineClipping.cpp.cpp  test_Triangle.cpp
Xyz/: Matrix.hpp  Vector.hpp  Xyz.hpp
Xyz/Fundamentals/: MatrixClass.hpp  MatrixFunctions.hpp  MatrixOperators.hpp  Projections.hpp  Transformations.hpp  Transforms.hpp  VectorClass.hpp  VectorFunctions.hpp  VectorOperators.hpp
Xyz/Geometry/: Intersection.hpp  Line.hpp  LineClipping.hpp  LineIntersections.hpp  LineLineIntersection.hpp  LineSegment.hpp  Rectangle.hpp  Triangle.hpp  _Intersections-impl.hpp
Xyz/Utilities/: Clamp.hpp  Comparisons.hpp  Constants.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Utilities.hpp
extras/: CMakeLists.txt
extras/xyz_calc/: CMakeLists.txt  Operations.cpp  Operations.hpp  XyzCalc.cpp
extras/xyz_calc/ParserTools/: DelimiterFinders.hpp  StringTokenizer.hpp
extras/xyz_calc/linenoise/: README.markdown  linenoise-version.txt
include/Xyz/: AABB.hpp  Approx.hpp  Clamp.hpp  ComplexApprox.hpp  Constants.hpp  CoordinateSystem.hpp  Face.hpp  FloatType.hpp  Generators.hpp  HalfEdge.hpp  Interpolation.hpp  IntersectionType.hpp  InvertMatrix.hpp  Line.hpp  LineClipper.hpp  LineClipping.hpp  LineLineIntersection.hpp  LineSegment.hpp  LinearAlgebra.hpp  LuDecomposition.hpp  Matrix.hpp  MatrixDeterminant.hpp  MatrixTransformations.hpp  Mesh.hpp  Orientation.hpp  OrientedRectangle.hpp  Pgram3.hpp  Placement.hpp  Plane.hpp  PlanePlaneIntersection.hpp  PlaneSegment.hpp  ProjectionMatrix.hpp  QuadraticEquation.hpp  RandomGenerator.hpp  RandomNumberGenerator.hpp  Rectangle.hpp  RotationMatrix.hpp  SimplexNoise.hpp  SphericalPoint.hpp  TransformationMatrix.hpp  (+5 more)
include/Xyz/Fundamentals/: MatrixClass.hpp  MatrixFunctions.hpp  MatrixOperators.hpp  Projections.hpp  Transformations.hpp  VectorClass.hpp  VectorFunctions.hpp  VectorOperators.hpp
include/Xyz/Generators/: RectangleGenerator.hpp  RegularPolygonGenerator.hpp
include/Xyz/Geometry/: CoordinateSystem.hpp  Line.hpp  LineClipping.hpp  LineLineIntersection.hpp  LineSegment.hpp  Plane.hpp  Rectangle.hpp  Triangle.hpp  _Distance-impl.hpp  _Distance.hpp  _Intersections.hpp  _LineString-impl.hpp  _LineString.hpp
include/Xyz/Makers/: MakeHollowPolygon.hpp  MakeStarPolygon.hpp
include/Xyz/Math/: InvertMatrix.hpp  MatrixDeterminant.hpp
include/Xyz/Meshes/: MakeHollowPolygonMesh.hpp  MakeRectangleMesh.hpp  MakeStarPolygonMesh.hpp  RegularPolygonGenerator.hpp  StarPolygonGenerator.hpp  TriangleFace.hpp  TriangleMesh.hpp
include/Xyz/Utilities/: Clamp.hpp  Comparisons.hpp  Constants.hpp  FloatType.hpp  Utilities.hpp
misc/removed/Xyz/Generators/: RectangleGenerator.hpp  RegularPolygonGenerator.hpp
misc/removed/Xyz/Geometry/: _Distance.hpp  _Intersections.hpp  _LineString.hpp
misc/removed/Xyz/Utilities/: GetNearest.hpp
misc/removed/XyzTest/Geometry/: test_LineString.cpp
src/Xyz/: Face.cpp  IntersectionType.cpp  RandomGenerator.cpp  RandomNumberGenerator.cpp  SimplexNoise.cpp  XyzVersion.hpp.in
src/Xyz/Geometry/: _Intersections.cpp
src/Xyz/Makers/: MakeHollowPolygon.cpp  MakeStarPolygon.cpp
src/Xyz/Meshes/: MakeHollowPolygonMesh.cpp  MakeRectangleMesh.cpp  MakeStarPolygonMesh.cpp  Mesh.hpp
src/Xyz/Utilities/: RandomGenerator.cpp
tests/: CMakeLists.txt  main.cpp
tests/CatchXyzTest/: CMakeLists.txt  CatchXyzTestMain.cpp  test_AABB.cpp  test_Approx.cpp  test_ComplexApprox.cpp  test_ComplexApprox.hpp  test_CoordinateSystem.cpp  test_Generators.cpp  test_Interpolation.cpp  test_Intersections.cpp  test_InvertMatrix.cpp  test_LineClipper.cpp  test_LineClipping.cpp  test_Matrix.cpp  test_MatrixDeterminant.cpp  test_Mesh.cpp  test_Orientation.cpp  test_OrientedRectangle.cpp  test_Pgram3.cpp  test_Plane.cpp  test_PlaneSegment.cpp  test_Projections.cpp  test_QuadraticEquation.cpp  test_Rect.cpp  test_Rectangle.cpp  test_Transformations.cpp  test_Transforms.cpp  test_Triangle.cpp  test_Vector.cpp
tests/Fundamentals/: YtestUtilities.hpp  test_Matrix.cpp  test_Projections.cpp
tests/XyzTest/: CMakeLists.txt  XyzTestMain.cpp  YtestUtilities.hpp  main.cpp  test_Approx.cpp  test_CoordinateSystem.cpp  test_Intersections.cpp  test_InvertMatrix.cpp  test_LineClipping.cpp  test_LineClipping.cpp.cpp  test_Matrix.cpp  test_MatrixDeterminant.cpp  test_Projections.cpp  test_Transforms.cpp  test_Triangle.cpp  test_Vector.cpp
tests/XyzTest/Fundamentals/: YtestUtilities.hpp  test_InvertMatrix.cpp  test_Matrix.cpp  test_MatrixDeterminant.cpp  test_Projections.cpp  test_Transforms.cpp  test_Vector.cpp
tests/XyzTest/Geometry/: test_CoordinateSystem.cpp  test_Intersections.cpp  test_Triangle.cpp
